--- a/nolu/core/includes/views/core_view.llg.yaml
+++ b/nolu/core/includes/views/core_view.llg.yaml
@@ -498,7 +498,11 @@
                             {% else %}
                             widget_hours_to_show: 24
                             {% endif %}
-
+                            {% if (widget.line_color is defined) %}
+                            widget_line_color: {{ widget.line_color }}
+                            {% else %}
+                            widget_line_color: orange
+                            {% endif %}
 
 
                         #################################################
