--- a/nolu/custom_example/custom.config.yaml
+++ b/nolu/custom_example/custom.config.yaml
@@ -142,6 +142,7 @@ home:
           switch_entity: 'switch.xxxxxxx' # string | required - entity to switch on click
           graph_entity: 'sensor.xxxxxxx' # string | optional - entity show the graph for
           hours_to_show: 72 # integer | optional - graph time period
+          line_color: 'blue' # string | optional | default: 'orange' - color of the graph line
 
         #################################################
         #         TEMPERATURE SENSOR EXAMPLE
