--- a/nolu/core/themes/nolu_light.theme.yaml
+++ b/nolu/core/themes/nolu_light.theme.yaml
@@ -1,13 +1,13 @@
 #default dark mode
-primary-text-color: '#e1e1e1'
-primary-background-color: '#111111'
-secondary-background-color: '#202020'
-card-background-color: '#1c1c1c'
-primary-color: '#03a9f4'
+primary-text-color: '#1E232D'
+primary-background-color: '#DEE0E3'
+secondary-background-color: '#F1F3F7'
+card-background-color: 'var(--primary-background-color)'
+primary-color: '#3478F5'
 app-header-text-color: var(--primary-text-color)
-app-header-background-color: '#101e24'
-table-row-background-color: var(--primary-background-color)
-table-row-alternative-background-color: var(--secondary-background-color)
+app-header-background-color: '#F1F3F7'
+table-row-background-color: '#E8EAED'
+table-row-alternative-background-color: '#F2F4F7'
 sidebar-background-color: var(--card-background-color)
 divider-color: rgba(225, 225, 225, 0.12)
 
@@ -20,7 +20,7 @@ ha-card-header-color: 'rgba(255, 255, 255, 0.8)'
 ha-card-header-font-family: sans-serif
 ha-card-header-font-size: 2.4vw
 state-icon-color: '#9da0a2'
-state-icon-active-color: '#3182b7'
+state-icon-active-color: '#e3c817'
 switch-checked-color: '#7a7d7f'
 switch-unchecked-button-color: '#3b4041'
 switch-unchecked-track-color: '#0c0d0d'
@@ -53,23 +53,24 @@ markdown-sidebar-line-height: 2.1vw
 ##########################################################
 #     Colors
 ##########################################################
-nolu-color-primary: rgba(32, 89, 201, 1)
+nolu-color-primary: rgba(227, 200, 23, 1)
 
 nolu-color-black: rgb(0, 0, 0)
-nolu-color-black-transparent: rgba(0, 0, 0, 0.5)
+nolu-color-black-transparent: rgba(150, 150, 150, 0.5)
 nolu-color-black-dark: rgb(22, 22, 22)
 nolu-color-black-light: rgb(146, 151, 179)
 nolu-color-black-light-transparent: rgba(44, 46, 59, 0.13)
 
-nolu-color-blue: rgba(32, 89, 201, 1)
+nolu-color-blue: rgba(227, 200, 23, 1)
 nolu-color-purple: rgb(104, 91, 219)
 nolu-color-white: rgb(245, 245, 245)
 
 nolu-color-gray: red
-nolu-color-gray-light: rgb(227, 228, 232)
-nolu-color-gray-lighter: rgb(151, 151, 151);
+nolu-color-gray-light: '#777c85'
+nolu-color-gray-lighter: '#edeff3'
 nolu-color-gray-gradient: linear-gradient(0deg, rgba(155,156,160,1) 0%, rgba(227,228,232,1) 100%)
 
+nolu-color-primary-gradient: linear-gradient(0deg, rgba(253,187,45,1) 0%, rgba(253,187,45,1) 51%, rgba(250,204,106,1) 100%)
 ##########################################################
 #
 #     ALIASES
@@ -80,8 +81,8 @@ nolu-color-gray-gradient: linear-gradient(0deg, rgba(155,156,160,1) 0%, rgba(227
 nolu-background-color-active: var(--nolu-color-white)
 nolu-color-active: var(--nolu-color-black-dark)
 
-nolu-background-color-inactive: var(--nolu-color-black-dark)
-nolu-color-inactive: var(--nolu-color-white)
+nolu-background-color-inactive: 'var(--nolu-color-gray-lighter)'
+nolu-color-inactive: var(--nolu-color-gray-light)
 
 # invert
 nolu-background-color-invert-active: var(--nolu-color-black-dark)
@@ -140,303 +141,3 @@ card-mod-view-yaml: |
       h1 {
         color: red !important;
       }
-
-  #################################################
-  #                                               #
-  #               GRID CARD HEADER                #
-  #                                               #
-  #################################################
-
-# "grid-layout$":
-#   hui-grid-card:
-#     $: |
-#       h1 {
-#         background-color: red!important;
-#         line-height: 0 !important;
-#         padding: 1vw 0 2vw 0 !important;
-#         font-weight: 500 !important;
-#       }
-
-#       /* portrait */
-#       @media screen and (max-width: 1200px) {
-#         h1 {
-#           font-size: 3.3vw !important;
-#           line-height: 1.1vw !important;
-#         }
-#       }
-
-#       /* phone */
-#       @media screen and (max-width: 800px) {
-#         h1 {
-#           font-size: 5.5vw !important;
-#           line-height: 6vw !important;
-#           margin: 2vw 0 0 0 !important;
-#         }
-#       }
-
-#   #################################################
-#   #                                               #
-#   #           CORONAVIRUS MARKDOWN CARD           #
-#   #                                               #
-#   #################################################
-
-#   "grid-layout$hui-markdown-card:last-of-type$":
-#     .: |
-#       ha-card, ha-markdown {
-#         background: none;
-#         padding: 0 !important;
-#         pointer-events: none;
-#         margin-top: -1vw;
-#       }
-
-#       ha-markdown {
-#         overflow: hidden;
-#       }
-
-#     ha-card>ha-markdown$: |
-#       ha-markdown-element {
-#         opacity: 0.6;
-#         font-size: 1.26vw;
-#         font-weight: 400;
-#         --mdc-icon-size: 1.2vw;
-#         font-family: SF Display;
-#         letter-spacing: 0.05vw;
-#         line-height: 0px;
-#         white-space: nowrap;
-#       }
-
-#       ha-icon {
-#         vertical-align: 3%;
-#         opacity: 0.4;
-#       }
-
-#       /* phone */
-#       @media screen and (max-width: 800px) {
-#         ha-markdown-element {
-#           display: none;
-#         }
-#       }
-
-# card-mod-card: |
-#   .card-content {
-#     padding: 1.8em 2em 1.8em 2em;
-#   }
-
-#   .card-header {
-#     background-color: red!import;
-#     letter-spacing: 0.005em;
-#     font-size: 1.6em;
-#     font-weight: 500;
-#     padding: 1.25em 0 0 1.68em;
-#     line-height: initial;
-#     cursor: default;
-#   }
-
-#   /* * * * * * * * * * * * * * * * * *
-#     *                                 *
-#     *           BUTTON CARD           *
-#     *                                 *
-#     * * * * * * * * * * * * * * * * * */
-
-#   .type-button {
-#     display: block;
-#     color: rgb(255, 255, 255);
-#     opacity: 0.2;
-#     transition: 0.4s;
-#   }
-
-#   .type-button:hover {
-#     opacity: 0.5;
-#     transition: none;
-#   }
-
-#   .type-button:active {
-#     opacity: 0.7;
-#     transition: none;
-#   }
-
-#   /* * * * * * * * * * * * * * * * * *
-#     *                                 *
-#     *            MAP CARD             *
-#     *                                 *
-#     * * * * * * * * * * * * * * * * * */
-
-#   .type-map {
-#     animation: type-map 1s forwards;
-#   }
-
-#   @keyframes type-map {
-#     0%, 100% {
-#       border-top: 2px solid #1e1e1e;
-#     }
-#   }
-
-#   .type-map .leaflet-control-attribution {
-#     display: none;
-#   }
-
-#   .type-map .leaflet-bar a {
-#     background-color: rgba(47, 51, 51, 0.8);
-#     color: #9da0a2;
-#   }
-
-#   .type-map a.leaflet-control-zoom-in {
-#     border-bottom: 1px solid #000000;
-#   }
-
-#   .type-map #root > ha-icon-button {
-#     color: var(--primary-color);
-#   }
-
-#   .type-map .leaflet-pane.leaflet-tile-pane {
-#     filter: contrast(85%);
-#   }
-
-#   /* * * * * * * * * * * * * * * * * *
-#     *                                 *
-#     *         CUSTOM BAR CARD         *
-#     *                                 *
-#     * * * * * * * * * * * * * * * * * */
-
-#   .type-custom-bar-card bar-card-name {
-#     padding-left: 0.25em;
-#   }
-
-#   .type-custom-bar-card bar-card-iconbar {
-#     padding-left: 0.23em;
-#   }
-
-#   .type-custom-bar-card bar-card-value {
-#     font-size: 1em;
-#     font-weight: 400;
-#     color: #e0e1e1;
-#     letter-spacing: 0.01em;
-#     text-shadow: none;
-#     margin-right: auto;
-#     margin-top: 5px;
-#   }
-
-#   .type-custom-bar-card bar-card-backgroundbar {
-#     background: none;
-#   }
-
-#   .type-custom-bar-card bar-card-background  {
-#     background: radial-gradient(circle, rgba(52, 57, 58, 0.1) 0%, rgba(17, 18, 18, 0.2) 75%);
-#     box-shadow: inset 0 0 25px #00000045;
-#     border-radius: 0.3em;
-#     overflow: hidden;
-#   }
-
-#   /* * * * * * * * * * * * * * * * * *
-#     *                                 *
-#     *      CUSTOM CALENDAR CARD       *
-#     *                                 *
-#     * * * * * * * * * * * * * * * * * */
-
-#   .type-custom-calendar-card > table > tbody > tr > td > div {
-#     opacity: 0.5;
-#     cursor: default;
-#   }
-
-#   .type-custom-calendar-card > table > tbody > tr > td {
-#     cursor: default;
-#   }
-
-#   .type-custom-calendar-card > table > tbody > tr > td.overview.no-pointer > div {
-#     opacity: 1;
-#   }
-
-#   .type-custom-calendar-card .day-wrapper.day-wrapper-last > td {
-#     border-color: rgba(225, 225, 225, 0.1);
-#   }
-
-# card-mod-more-info-yaml: |
-#   .: |
-#     app-toolbar {
-#       background: none !important;
-#     }
-
-#     .main-title {
-#       margin-top: 5px;
-#       font-family: SF Text;
-#       letter-spacing: 0.005em;
-#     }
-
-#     mwc-icon-button {
-#       margin-top: -2px;
-#       color: #9e9e9e;
-#     }
-
-#   "mwc-icon-button":
-#     $: |
-#       button > mwc-ripple {
-#         margin-top: 3px;
-#       }
-
-#   "layout-card$grid-layout$": |
-#       #root {
-#         margin: 0 !important;
-#       }
-
-#   $: |
-#     .mdc-dialog__scrim {
-#       -webkit-backdrop-filter: blur(1.5em);
-#       backdrop-filter: blur(1.5em);
-#       transition: none !important;
-#     }
-
-#     .mdc-dialog .mdc-dialog__container {
-#       background: none;
-#     }
-
-#     .mdc-dialog__surface {
-#       background: linear-gradient(180deg,
-#         var(--ha-card-header-background-color) 0%,
-#         var(--ha-card-header-background-color) 4.6em,
-#         var(--ha-card-background-color) 4.6em,
-#         var(--ha-card-background-color) 100%) !important;
-#       box-shadow: none !important;
-#       border-radius: 1em !important;
-#     }
-
-#     .mdc-dialog--closing {
-#       display: none !important;
-#     }
-
-#   #################################################
-#   #                                               #
-#   #            CUSTOM LIGHT POPUP CARD            #
-#   #                                               #
-#   #################################################
-
-#   "hui-entities-card$light-popup-card$": |
-#     #popup {
-#       margin: -2.4em 0 1.4em 0;
-#       isolation: isolate;
-#     }
-
-#     input[type=range] {
-#       cursor: grab;
-#     }
-
-#     #brightnessValue {
-#       color: rgba(255, 255, 255, 0.8);
-#       margin: 1.3vh 0 0 0;
-#       font-size: 2em;
-#       font-weight: 400;
-#       position: absolute;
-#       z-index: 100;
-#       font-family: SF Display;
-#       letter-spacing: 0.02em;
-#       pointer-events: none;
-#       mix-blend-mode: difference;
-#       text-align: center;
-#     }
-
-#     #popup>div.range-holder>input[type=range] {
-#       --slider-thumb-color: #b4b4b4 !important;
-#     }
-
-#     #popup>div.range-holder>input[type=range]::-webkit-slider-thumb {
-#       cursor: grabbing;
-#     }
