--- a/nolu/core/includes/views/core_view.llg.yaml
+++ b/nolu/core/includes/views/core_view.llg.yaml
@@ -183,52 +183,7 @@
                         #################################################
                         {% elif widget.type == 'icons' %}
                         - type: 'custom:mod-card'
-                          style:
-                            .: |
-                              :host {
-                                align-items: flex-start;
-                                display: flex;
-                                justify-content: flex-start;
-                                padding: 0rem !important;
-                              }
-                              #states {
-                                padding: 0;
-                              }
-                              ha-card {
-                                width: 100%;
-                                height: 100%;
-                              }
-                            hui-horizontal-stack-card$: |
-                              #root {
-                                flex-flow: row wrap;
-                              }
-                              #root > * {
-                                display: flex;
-                                flex: 1 1 50%;
-                                margin: 0 !important;
-                              }
-                              {# @media only screen
-                              and (min-width: 600px) {
-                                #root > * {
-                                  flex: 1 1 auto;
-                                }
-                              } #}
-                              #root > mod-card:nth-child(1) {
-                                align-items: flex-start;
-                                justify-content: center;
-                              }
-                              #root > mod-card:nth-child(2) {
-                                align-items: flex-start;
-                                justify-content: center;
-                              }
-                              #root > mod-card:nth-child(3) {
-                                align-items: flex-end;
-                                justify-content: center;
-                              }
-                              #root > mod-card:nth-child(4) {
-                                align-items: flex-end;
-                                justify-content: center;
-                              }
+                          style: !include includes/styles/widget_icons.styles.yaml
                           card:
                             type: 'horizontal-stack'
                             cards:
@@ -353,6 +308,80 @@
                                     {% endif %}
                                 {% endif %}
                               {% endfor %}
+
+
+
+                        #################################################
+                        #         BATTERIES
+                        # TODO: transform into include, however passing
+                        # lists is still an issue in lovelace_gen
+                        #################################################
+                        {% elif widget.type == 'batteries' %}
+                        - type: 'custom:mod-card'
+                          style: !include includes/styles/widget_icons.styles.yaml
+                          card:
+                            type: 'horizontal-stack'
+                            cards:
+                              {% set total_icons = widget.icons_list | length %}
+                              {% set blank_items_amount = 4 - (total_icons | int) %}
+                              {% for n in range(blank_items_amount) %}
+                                {% set new_icons_list = widget.icons_list.append({
+                                  "type": "blank"
+                                }) %}
+                              {% endfor %}
+
+                              {% for icon_item in widget.icons_list %}
+                                {% if loop.index <= 4 %}
+                              #################################################
+                              #         ENTITY
+                              #################################################
+                              - type: custom:mod-card
+                                style:
+                                  hui-vertical-stack-card$: |
+                                    #root {
+                                      align-items: center;
+                                      justify-content: center;
+                                    }
+                                    #root > * {
+                                      margin-right: 0 !important;
+                                    }
+                                card:
+                                  type: 'vertical-stack'
+                                  cards:
+                                    {% if icon_item.type is defined and
+                                      icon_item.type == 'blank' %}
+                                    #################################################
+                                    #         DUMMY ICON
+                                    #################################################
+                                    - !include
+                                      - includes/widgets/icon_dummy_widget.llg.yaml
+                                      - icon_item_type: {{ icon_item.type }}
+                                    {% else %}
+                                    #################################################
+                                    #         ICON BUTTON
+                                    #################################################
+                                    - type: 'custom:button-card'
+                                      {% if icon_item.entity is defined %}
+                                      entity: {{ icon_item.entity }}
+                                      {% endif %}
+
+                                      {% if icon_item.name is defined %}
+                                      name: {{ icon_item.name }}
+                                      {% endif %}
+
+                                      {% if icon_item.icon is defined %}
+                                      icon: {{ icon_item.icon }}
+
+                                      variables:
+                                        has_icon: true
+                                      {% endif %}
+                                      
+                                      template:
+                                        - 'battery_base'
+                                    {% endif %}
+                                {% endif %}
+                              {% endfor %}
+
 
 
 
