#37: fix battery percentage

--- a/nolu/core/includes/buttons/battery_base.yaml
+++ b/nolu/core/includes/buttons/battery_base.yaml
@@ -52,6 +52,10 @@ battery_base:
       - height: auto
       - color: rgb(255, 255, 255)
       - --mdc-icon-size: 25px
+      - display: |
+          [[[
+            return variables && variables.has_icon ? 'block' : 'none';
+          ]]]
 
     ############################################################################
     #       NAME (#name)
