--- a/nolu/core/includes/buttons/battery_base.yaml
+++ b/nolu/core/includes/buttons/battery_base.yaml
@@ -174,8 +174,8 @@ battery_base:
     [[[
       return `
         #img-cell {
-          padding: 0.5rem!important;
-          width: 46px !important;
+          padding: 0.5rem 0 !important;
+          width: 100% !important;
           height: 46px !important;
           position: absolute !important;
           top: 0 !important;
