--- a/nolu/core/includes/views/includes/styles/widget_icons.styles.yaml
+++ b/nolu/core/includes/views/includes/styles/widget_icons.styles.yaml
@@ -18,7 +18,7 @@ hui-horizontal-stack-card$: |
   }
   #root > * {
     display: flex;
-    flex: 1 1 50%;
+    flex: 1 1 50% !important;
     margin: 0 !important;
   }
   {# @media only screen
