--- a/nolu/custom_example/custom.config.yaml
+++ b/nolu/custom_example/custom.config.yaml
@@ -314,6 +314,20 @@ home:
           # required - no default
           content: 'Just a markdown card' # string | required - content of the markdown card
 
+
+        #################################################
+        #         BLANK EXAMPLE
+        #################################################
+        # `type`
+        # string - The type of widget
+        # required - no default
+        - type: 'blank' # string | required - widget type
+
+          # `content`
+          # string - The blank content
+          # required - no default
+          content: '' # string | required - content of the blank card
+
         #################################################
         #         PERSON
         #################################################
