--- a/nolu/core/includes/buttons/shared/embed_battery_icon.yaml
+++ b/nolu/core/includes/buttons/shared/embed_battery_icon.yaml
@@ -57,6 +57,10 @@ embed_battery_icon:
       }
       return null;
     ]]]
+  tap_action:
+    action: more-info
+    haptic: medium
+
   styles:
     ############################################################################
     #       GRID (#container)
